--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,14 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   provider: ^6.0.2
-  logger: ^1.1.0
+  logger: ^2.0.2+1
   font_awesome_flutter: ^10.6.0
+  flutterfire_ui: ^0.4.3+20
+  firebase_auth: ^4.14.0
+  firebase_core: ^2.22.0
+  flutter_google_places: ^0.3.0
+  google_maps_flutter: ^2.5.0
+  address_search_field: ^5.0.3
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +52,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
