--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   address_search_field: ^5.0.3
   firebase_database: ^10.3.5
+  cloud_firestore: ^4.13.3
 
 dev_dependencies:
   flutter_test:
